--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -464,6 +464,7 @@
     <Content Include="Content\cards\jou-welcome-letter-white2-lg.jpg" />
     <Content Include="Content\cards\jou-welcome-letter-white2.jpg" />
     <Content Include="Content\cards\jou-zombie-token.jpg" />
+    <Content Include="Content\cards\ktk-achievement-card-lg.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-abzan-lg.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-abzan.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-jeskai-lg.jpg" />
