Added Gatherer import, and created Onslaught, Masques, and Urza blocks (9 sets total).

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -377,6 +377,22 @@
     <Content Include="Content\cards\dka-sticker-vampire.png" />
     <Content Include="Content\cards\dka-sticker-werewolf.png" />
     <Content Include="Content\cards\dka-sticker-zombie.png" />
+    <Content Include="Content\cards\frf-achievement-card-lg.jpg" />
+    <Content Include="Content\cards\frf-clan-info-abzan-lg.jpg" />
+    <Content Include="Content\cards\frf-clan-info-jeskai-lg.jpg" />
+    <Content Include="Content\cards\frf-clan-info-mardu-lg.jpg" />
+    <Content Include="Content\cards\frf-clan-info-sultai-lg.jpg" />
+    <Content Include="Content\cards\frf-clan-info-temur-lg.jpg" />
+    <Content Include="Content\cards\frf-fat-pack-card-box.png" />
+    <Content Include="Content\cards\frf-fat-pack-deck-box.png" />
+    <Content Include="Content\cards\frf-fat-pack-mural.png" />
+    <Content Include="Content\cards\frf-fat-pack-players-guide.png" />
+    <Content Include="Content\cards\frf-fat-pack-rules-reference-card.png" />
+    <Content Include="Content\cards\frf-spindown-life-counter-abzan.png" />
+    <Content Include="Content\cards\frf-spindown-life-counter-jeskai.png" />
+    <Content Include="Content\cards\frf-spindown-life-counter-mardu.png" />
+    <Content Include="Content\cards\frf-spindown-life-counter-sultai.png" />
+    <Content Include="Content\cards\frf-spindown-life-counter-temur.png" />
     <Content Include="Content\cards\gtc-achievement-card-boros-lg.jpg" />
     <Content Include="Content\cards\gtc-achievement-card-boros.jpg" />
     <Content Include="Content\cards\gtc-achievement-card-dimir-lg.jpg" />
@@ -464,7 +480,6 @@
     <Content Include="Content\cards\jou-welcome-letter-white2-lg.jpg" />
     <Content Include="Content\cards\jou-welcome-letter-white2.jpg" />
     <Content Include="Content\cards\jou-zombie-token.jpg" />
-    <Content Include="Content\cards\ktk-achievement-card-lg.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-abzan-lg.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-abzan.jpg" />
     <Content Include="Content\cards\ktk-achivement-card-jeskai-lg.jpg" />
@@ -821,6 +836,42 @@
     <Content Include="Content\jou\images\symbol-original.png" />
     <Content Include="Content\jou\images\symbol.png" />
     <Content Include="Content\jou\set.css" />
+    <Content Include="Content\scg\images\bg.jpg" />
+    <Content Include="Content\scg\images\logo-word.png" />
+    <Content Include="Content\scg\images\symbol.png" />
+    <Content Include="Content\scg\set.css" />
+    <Content Include="Content\lgn\images\bg.jpg" />
+    <Content Include="Content\lgn\images\logo-word.png" />
+    <Content Include="Content\lgn\images\symbol.png" />
+    <Content Include="Content\lgn\set.css" />
+    <Content Include="Content\ons\images\bg.jpg" />
+    <Content Include="Content\ons\images\logo-word.png" />
+    <Content Include="Content\ons\images\symbol.png" />
+    <Content Include="Content\ons\set.css" />
+    <Content Include="Content\uds\images\bg.jpg" />
+    <Content Include="Content\uds\images\logo-word.png" />
+    <Content Include="Content\uds\images\symbol.png" />
+    <Content Include="Content\uds\set.css" />
+    <Content Include="Content\ulg\images\bg.jpg" />
+    <Content Include="Content\ulg\images\logo-word.png" />
+    <Content Include="Content\ulg\images\symbol.png" />
+    <Content Include="Content\ulg\set.css" />
+    <Content Include="Content\usg\images\bg.jpg" />
+    <Content Include="Content\usg\images\logo-word.png" />
+    <Content Include="Content\usg\images\symbol.png" />
+    <Content Include="Content\usg\set.css" />
+    <Content Include="Content\pcy\images\bg.jpg" />
+    <Content Include="Content\pcy\images\logo-word.png" />
+    <Content Include="Content\pcy\images\symbol.png" />
+    <Content Include="Content\pcy\set.css" />
+    <Content Include="Content\nms\images\bg.jpg" />
+    <Content Include="Content\nms\images\logo-word.png" />
+    <Content Include="Content\nms\images\symbol.png" />
+    <Content Include="Content\nms\set.css" />
+    <Content Include="Content\mmq\images\symbol.png" />
+    <Content Include="Content\mmq\images\bg.jpg" />
+    <Content Include="Content\mmq\images\logo-word.png" />
+    <Content Include="Content\mmq\set.css" />
     <Content Include="Content\ktk\cards\ktk-achivement-card-abzan-lg.jpg" />
     <Content Include="Content\ktk\cards\ktk-achivement-card-abzan.jpg" />
     <Content Include="Content\ktk\cards\ktk-achivement-card-jeskai-lg.jpg" />
@@ -1226,6 +1277,51 @@
     <Content Include="Content\frf\import-settings-frf.json" />
     <Content Include="Content\frf\packs.json" />
     <Content Include="Content\frf\products.json" />
+    <Content Include="Content\mmq\cardsMain.json" />
+    <Content Include="Content\mmq\cardsOther.json" />
+    <Content Include="Content\mmq\cardsToken.json" />
+    <Content Include="Content\mmq\packs.json" />
+    <Content Include="Content\mmq\products.json" />
+    <Content Include="Content\nms\cardsMain.json" />
+    <Content Include="Content\nms\cardsOther.json" />
+    <Content Include="Content\nms\cardsToken.json" />
+    <Content Include="Content\nms\packs.json" />
+    <Content Include="Content\nms\products.json" />
+    <Content Include="Content\pcy\cardsMain.json" />
+    <Content Include="Content\pcy\cardsOther.json" />
+    <Content Include="Content\pcy\cardsToken.json" />
+    <Content Include="Content\pcy\packs.json" />
+    <Content Include="Content\pcy\products.json" />
+    <Content Include="Content\usg\cardsMain.json" />
+    <Content Include="Content\usg\cardsOther.json" />
+    <Content Include="Content\usg\cardsToken.json" />
+    <Content Include="Content\usg\packs.json" />
+    <Content Include="Content\usg\products.json" />
+    <Content Include="Content\ulg\cardsMain.json" />
+    <Content Include="Content\ulg\cardsOther.json" />
+    <Content Include="Content\ulg\cardsToken.json" />
+    <Content Include="Content\ulg\packs.json" />
+    <Content Include="Content\ulg\products.json" />
+    <Content Include="Content\uds\cardsMain.json" />
+    <Content Include="Content\uds\cardsOther.json" />
+    <Content Include="Content\uds\cardsToken.json" />
+    <Content Include="Content\uds\packs.json" />
+    <Content Include="Content\uds\products.json" />
+    <Content Include="Content\ons\cardsMain.json" />
+    <Content Include="Content\ons\cardsOther.json" />
+    <Content Include="Content\ons\cardsToken.json" />
+    <Content Include="Content\ons\packs.json" />
+    <Content Include="Content\ons\products.json" />
+    <Content Include="Content\lgn\cardsMain.json" />
+    <Content Include="Content\lgn\cardsOther.json" />
+    <Content Include="Content\lgn\cardsToken.json" />
+    <Content Include="Content\lgn\packs.json" />
+    <Content Include="Content\lgn\products.json" />
+    <Content Include="Content\scg\cardsMain.json" />
+    <Content Include="Content\scg\cardsOther.json" />
+    <Content Include="Content\scg\cardsToken.json" />
+    <Content Include="Content\scg\packs.json" />
+    <Content Include="Content\scg\products.json" />
     <None Include="Properties\PublishProfiles\mtgen-local.pubxml" />
     <None Include="Properties\PublishProfiles\mtgen.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
@@ -1340,9 +1436,27 @@
     <Content Include="Views\Util\CheckCardNums.cshtml" />
     <Content Include="Views\Set\999.cshtml" />
     <Content Include="Views\Set\frf.cshtml" />
+    <Content Include="Views\Set\mmq.cshtml" />
+    <Content Include="Views\Set\nms.cshtml" />
+    <Content Include="Views\Set\pcy.cshtml" />
+    <Content Include="Views\Set\usg.cshtml" />
+    <Content Include="Views\Set\ulg.cshtml" />
+    <Content Include="Views\Set\uds.cshtml" />
+    <Content Include="Views\Set\ons.cshtml" />
+    <Content Include="Views\Set\lgn.cshtml" />
+    <Content Include="Views\Set\scg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\lgn\cards\" />
+    <Folder Include="Content\mmq\cards\" />
+    <Folder Include="Content\nms\cards\" />
+    <Folder Include="Content\ons\cards\" />
+    <Folder Include="Content\pcy\cards\" />
+    <Folder Include="Content\scg\cards\" />
+    <Folder Include="Content\uds\cards\" />
+    <Folder Include="Content\ulg\cards\" />
+    <Folder Include="Content\usg\cards\" />
     <Folder Include="Views\Proxy\" />
     <Folder Include="Views\Sitemap\" />
   </ItemGroup>
