Added print stylesheet to print 3x3 cards per page.

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -731,6 +731,7 @@
     <Content Include="Content\dtk\images\symbol.png" />
     <Content Include="Content\dtk\set.css" />
     <Content Include="Content\frf\images\bg.jpg" />
+    <Content Include="Content\print.css" />
     <Content Include="Content\gtc\cards\gtc-achievement-card-boros-lg.jpg" />
     <Content Include="Content\gtc\cards\gtc-achievement-card-boros.jpg" />
     <Content Include="Content\gtc\cards\gtc-achievement-card-dimir-lg.jpg" />
