- totally rewrote importer-gm-json.html    - renamed original to importer-gm-json-OLD.html    - new one is called card-data-importer.html    - new version streamlines the import: get all data, process cards, process images, apply exceptions, apply images to cards, create reporting data, output reporting data and final cardsMain.json    - not properly tested yet, but code complete

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -640,6 +640,19 @@
     <Content Include="Content\cards\ori-nissa-vastwood-seer--nissa-sage-animist-promo-lg.png" />
     <Content Include="Content\cards\ori-nissa-vastwood-seer--nissa-sage-animist-promo.png" />
     <Content Include="Content\cards\ori-nissa-vastwood-seer--nissa-sage-animist.png" />
+    <Content Include="Content\cards\ori-spindown-life-counter-black.png" />
+    <Content Include="Content\cards\ori-spindown-life-counter-blue.png" />
+    <Content Include="Content\cards\ori-spindown-life-counter-green.png" />
+    <Content Include="Content\cards\ori-spindown-life-counter-red.png" />
+    <Content Include="Content\cards\ori-spindown-life-counter-white.png" />
+    <Content Include="Content\cards\ori-story-booklet-chandra-lg.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-chandra.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-gideon-lg.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-gideon.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-jace-lg.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-jace.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-liliana-lg.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-liliana.jpg" />
     <Content Include="Content\cards\rtr-azorius-achievement-card-lg.jpg" />
     <Content Include="Content\cards\rtr-azorius-achievement-card.jpg" />
     <Content Include="Content\cards\rtr-azorius-welcome-letter-lg.jpg" />
@@ -1214,6 +1227,7 @@
     <Content Include="Content\frf\set.css" />
     <Content Include="Content\util\ba-simple-proxy.php" />
     <Content Include="Content\util\importer-decklist.html" />
+    <Content Include="Content\util\importer-gm-json-OLD.html" />
     <Content Include="Content\util\importer-gm-json.html" />
     <Content Include="Content\util\style.css" />
     <Content Include="Content\v14\cards\m15-wolf-token.png" />
