- added Magic Origins (ORI) set

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -653,6 +653,8 @@
     <Content Include="Content\cards\ori-story-booklet-jace.jpg" />
     <Content Include="Content\cards\ori-story-booklet-liliana-lg.jpg" />
     <Content Include="Content\cards\ori-story-booklet-liliana.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-nissa-lg.jpg" />
+    <Content Include="Content\cards\ori-story-booklet-nissa.jpg" />
     <Content Include="Content\cards\rtr-azorius-achievement-card-lg.jpg" />
     <Content Include="Content\cards\rtr-azorius-achievement-card.jpg" />
     <Content Include="Content\cards\rtr-azorius-welcome-letter-lg.jpg" />
@@ -1228,7 +1230,7 @@
     <Content Include="Content\util\ba-simple-proxy.php" />
     <Content Include="Content\util\importer-decklist.html" />
     <Content Include="Content\util\importer-gm-json-OLD.html" />
-    <Content Include="Content\util\importer-gm-json.html" />
+    <Content Include="Content\util\card-data-importer.html" />
     <Content Include="Content\util\style.css" />
     <Content Include="Content\v14\cards\m15-wolf-token.png" />
     <Content Include="Content\v14\cards\v14-collectors-guide.png" />
