--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -1231,7 +1231,9 @@
     <Content Include="Content\util\importer-decklist.html" />
     <Content Include="Content\util\importer-gm-json-OLD.html" />
     <Content Include="Content\util\card-data-importer.html" />
+    <Content Include="Content\util\js\card-data-importer.js" />
     <Content Include="Content\util\style.css" />
+    <Content Include="Content\util\tests\card-data-importer-tests.html" />
     <Content Include="Content\v14\cards\m15-wolf-token.png" />
     <Content Include="Content\v14\cards\v14-collectors-guide.png" />
     <Content Include="Content\v14\cards\v14-spindown-life-counter.png" />
