- build new C# proxy so card data importer would work - added new import to card data importer: wizards' archive

--- a/src/mtgen/project.json
+++ b/src/mtgen/project.json
@@ -31,7 +31,13 @@
   },
 
   "frameworks": {
-    "dnx451": { },
+    "dnx451": {
+      "dependencies": {
+      },
+      "frameworkAssemblies": {
+        "System.Net": "4.0.0.0"
+      }
+    },
     "dnxcore50": { }
   },
 
