--- a/src/mtgen/wwwroot/bfz/import-settings.json
+++ b/src/mtgen/wwwroot/bfz/import-settings.json
@@ -1,11 +1,6 @@
 {
- "gatheringMagicUrl": "http://www.gatheringmagic.com/battle-for-zendikar-spoilers/",
- "imagesUrl": "http://magic.wizards.com/en/content/battle-zendikar-cards",
- "tokensUrl": "",
- "exceptionsUrl": "http://mtgen.net/content/bfz/import-exceptions.json",
- "currentJson": "",
- "tokensParseType": "card-size",
- "setName": "Battle for Zendikar",
- "setCode": "bfz",
- "marketingCardImgSrc": "http://placebox.es/265x370/cccccc/969696/Marketing%20Card,20/"
+  "setCode": "bfz",
+  "cardDataUrl": "http://www.mtgsalvation.com/spoilers/filter?SetID=164&IncludeUnconfirmed=true&CardsPerRequest=999",
+  "imagesUrl": "http://magic.wizards.com/en/content/battle-zendikar-cards",
+  "exceptionsUrl": "http://mtgen.net/bfz/import-exceptions.json"
 }
