--- a/src/mtgen/project.json
+++ b/src/mtgen/project.json
@@ -36,12 +36,13 @@
   "frameworks": {
     "dnx451": {
       "dependencies": {
-        "Microsoft.Data.Edm": "5.6.3",
-        "Microsoft.Data.OData": "5.6.3",
-        "Microsoft.Data.Services.Client": "5.6.3",
-        "System.Spatial": "5.6.3"
+        "Microsoft.Data.Edm": "5.7.0",
+        "Microsoft.Data.OData": "5.7.0",
+        "Microsoft.Data.Services.Client": "5.7.0",
+        "System.Spatial": "5.7.0"
       },
       "frameworkAssemblies": {
+        "System.Data.Services.Client": "4.0.0.0",
         "System.Net": "4.0.0.0"
       }
     },
