--- a/src/mtgen/wwwroot/vma/import-settings-ovm.json
+++ b/src/mtgen/wwwroot/vma/import-settings-ovm.json
@@ -2,9 +2,9 @@
  "gatheringMagicUrl": "http://www.gatheringmagic.com/carlosgutierrez-05122014-vintage-masters-spoilers/",
  "imagesUrl": "http://archive.wizards.com/Magic/tcg/article.aspx?x=mtg/tcg/vintagemasters/cig",
  "tokensUrl": "http://www.wizards.com/Magic/Magazine/Article.aspx?x=mtg%2Fdaily%2Farcana%2F1244",
- "exceptionsUrl": "http://mtgen.net/content/ovm/import-exceptions-ovm.json",
+ "exceptionsUrl": "http://mtgen.net/content/vma/import-exceptions-vma.json",
  "tokensParseType": "card-size",
  "setName": "Vintage Masters",
- "setCode": "ovm",
+ "setCode": "vma",
  "tipCardImgSrc": "http://placebox.es/265x370/cccccc/969696/Tip%20Card,20/"
 }
