- converted data loading over to es6 + es6 promises

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\lib\js-version-notes.txt" />
     <Content Include="wwwroot\mm3\cardsTokens.json" />
     <Content Include="wwwroot\mm3\import-tokens.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
