- AKH: mostly done the set

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -13,10 +13,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\akh\cardsPromo.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="wwwroot\akh\cardsMain.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="wwwroot\akh\cardsMasterpiece.json" />
     <Content Include="wwwroot\akh\cardsOther.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\akh\cardsLand.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="wwwroot\akh\cardsToken.json">
@@ -29,12 +36,19 @@
     <Content Include="wwwroot\akh\import-masterpiece-series.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="wwwroot\akh\import-land.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\akh\import-promo.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="wwwroot\akh\import-other.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="wwwroot\akh\import-token.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="wwwroot\akh\KILLMEimport-other.json" />
     <Content Include="wwwroot\akh\packs.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
@@ -44,6 +58,13 @@
     <Content Include="wwwroot\akh\set.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="wwwroot\cards\akh-deckbuilding-info-lg.jpg" />
+    <Content Include="wwwroot\cards\akh-deckbuilding-info.jpg" />
+    <Content Include="wwwroot\cards\akh-minus-one-minus-one-counter.png" />
+    <Content Include="wwwroot\cards\akh-prerelease-deck-box.png" />
+    <Content Include="wwwroot\cards\akh-spindown-life-counter-strength.png" />
+    <Content Include="wwwroot\cards\akh-trials-checklist-lg.jpg" />
+    <Content Include="wwwroot\cards\akh-trials-checklist.jpg" />
     <Content Include="wwwroot\mm3\cardsTokens.json" />
     <Content Include="wwwroot\mm3\import-tokens.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
