- trying to get new assets to refresh

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -13,6 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot/cards\hou-deckbuilding-info-lg.jpg" />
+    <Content Remove="wwwroot/cards\hou-deckbuilding-info.jpg" />
+    <Content Remove="wwwroot/cards\hou-hours-checklist-lg.jpg" />
+    <Content Remove="wwwroot/cards\hou-hours-checklist.jpg" />
+    <Content Remove="wwwroot/cards\hou-minus-one-minus-one-counter.png" />
+    <Content Remove="wwwroot/cards\hou-prerelease-deck-box.png" />
+    <Content Remove="wwwroot/cards\hou-spindown-life-counter.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="wwwroot\hou\cardsLand.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
