--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -268,7 +268,15 @@
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="wwwroot\lib\mtgen-data.js" />
-    <Content Include="wwwroot\lib\riot.min-v3.6.1.js" />
+    <Content Include="wwwroot\lib\riot-and-compiler.min-v3.6.1.js" />
+    <Content Include="wwwroot\lib\riot-tags\card-count.js" />
+    <Content Include="wwwroot\lib\riot-tags\card-count.tag" />
+    <Content Include="wwwroot\lib\riot-tags\cardcount.tag" />
+    <Content Include="wwwroot\lib\riot+compiler.min-v3.6.1.js" />
+    <Content Include="wwwroot\lib\riot-tags\product.tag">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\lib\riot-tags\products.tag" />
     <Content Include="wwwroot\mm3\cardsTokens.json" />
     <Content Include="wwwroot\mm3\import-tokens.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
