- build the product tag and started to extract the booster-input into it's own tag - HOLY CRAP are Riot.js templates a bitch to debug! Screw it. I'm writing the UI in plain js. I hate frameworks.

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -269,10 +269,11 @@
     </Content>
     <Content Include="wwwroot\lib\mtgen-data.js" />
     <Content Include="wwwroot\lib\riot-and-compiler.min-v3.6.1.js" />
-    <Content Include="wwwroot\lib\riot-tags\card-count.js" />
-    <Content Include="wwwroot\lib\riot-tags\card-count.tag" />
-    <Content Include="wwwroot\lib\riot-tags\cardcount.tag" />
     <Content Include="wwwroot\lib\riot+compiler.min-v3.6.1.js" />
+    <Content Include="wwwroot\lib\riot-tags\booster-input.tag" />
+    <Content Include="wwwroot\lib\riot-tags\product - Copy.tag">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="wwwroot\lib\riot-tags\product.tag">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
