--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -40,6 +40,8 @@
     <Content Include="wwwroot\c17\import-land.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="wwwroot\c17\import-land3.json" />
+    <Content Include="wwwroot\c17\import-main-final.json" />
     <Content Include="wwwroot\c17\import-main.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
