--- a/mtgen/bower.json
+++ b/mtgen/bower.json
@@ -6,6 +6,9 @@
     "jquery": "2.2.0",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "tingle": "v0.10.0"
+    "tingle": "v0.12.0"
+  },
+  "resolutions": {
+    "tingle": "v0.12.0"
   }
 }
