ROE: Reimported all card images after Wizards change.

--- a/mtgen/mtgen.csproj
+++ b/mtgen/mtgen.csproj
@@ -40,6 +40,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
-  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4roe_4set_1json__JsonSchema="453" /></VisualStudio></ProjectExtensions>
 
 </Project>
